syntax = "proto3";

package user;
option go_package = "user/grpc/user-proto";



message GetAllHelperIdRequest {
}

message GetAllHelperIdResponse {
  repeated string list_helper_id = 1;
}

service UserGrpc {
  rpc GetAllHelperId(GetAllHelperIdRequest) returns (GetAllHelperIdResponse) {}
}